# clipsync

./: README.md  pyproject.toml
src/: cli.py  client.py  constants.py  server.py  ui.py
