[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipsync"
version = "0.1.0"
description = "clipsync - Cross-platform Clipboard synchronization utility"
requires-python = ">=3.7"
dependencies = [
  "pyperclip>=1.8",
  "tabulate>=0.9",
  "click>=8.0",
  "textual>=1.2",
]

[project.scripts]
clipsync = "cli:cli"